--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,11 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.0
+      - key: DATABASE_URL
+        value: postgres://postgres:postgres@localhost:5432/triage
     healthCheckPath: /
     autoDeploy: true
+    plan: free
 
   - type: web
     name: triage-ai-frontend
@@ -23,4 +26,5 @@ services:
         source: /*
         destination: /index.html
     healthCheckPath: /
-    autoDeploy: true 
+    autoDeploy: true
+    plan: free 
