--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,5 @@ python-multipart>=0.0.5
 sqlalchemy>=1.4.23
 python-jose>=3.3.0
 passlib>=1.7.4
-python-dotenv>=0.19.0 
+python-dotenv>=0.19.0
+psycopg2-binary>=2.9.1 
