--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,8 @@ sqlalchemy>=1.4.23
 python-jose>=3.3.0
 passlib>=1.7.4
 python-dotenv>=0.19.0
-psycopg2-binary>=2.9.1 
+psycopg2-binary>=2.9.1
+sentry-sdk>=1.5.0
+psutil>=5.8.0
+prometheus-client>=0.12.0
+python-json-logger>=2.0.7 
