Update .gitignore and package dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ wheels/
 .installed.cfg
 *.egg
 venv/
+ENV/
+.env
 
 # Node
 node_modules/
@@ -41,4 +43,22 @@ yarn-error.log*
 
 # OS
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Database
+*.db
+*.sqlite3
+
+# Build
+coverage/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
